# mmo

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Pulumi.dev.yaml  Pulumi.yaml  README.md  TODO.md  code.md  dev.sh  docker-compose.nobake.yml  docker-compose.yml  index.ts  package-lock.json  package.json
app/: Dockerfile  admin.html  game.html  index.js  package-lock.json  package.json  start.sh  world-data.json
bifrost/admin/: Cargo.toml
bifrost/admin/src/: api.rs  app.rs  lib.rs  types.rs
bifrost/admin/src/app/: biomes.rs  loot.rs  npcs.rs  quests.rs  story.rs  wac.rs  world.rs
bifrost/aigm/: Cargo.toml
bifrost/aigm/src/: aigm.rs  event.rs  lib.rs
bifrost/aigm/src/npc/: behavior.rs  context.rs  dialogue.rs  memory.rs  mod.rs  registry.rs
bifrost/aigm/src/quest/: mod.rs  registry.rs  types.rs
bifrost/aigm/src/story/: arc.rs  beat.rs  engine.rs  mod.rs  mood.rs
bifrost/chunk/: Cargo.toml
bifrost/chunk/src/: authority.rs  coord.rs  epoch.rs  lib.rs  peer.rs  registry.rs
bifrost/forge/nova-anim/src/: lib.rs  state_machine.rs  wac_bridge.rs
bifrost/forge/nova-core/src/: lib.rs  scene.rs
bifrost/forge/nova-input/src/: actions.rs
bifrost/forge/nova-render/src/: camera.rs  lib.rs  pipeline.rs
bifrost/items/: Cargo.toml
bifrost/items/src/: inventory.rs  item.rs  lib.rs  registry.rs
bifrost/kernel/: Cargo.toml
bifrost/kernel/src/: clock.rs  ids.rs  ledger.rs  lib.rs  pipeline.rs  transition.rs
bifrost/kernel/src/bridge/: wac_adapter.rs
bifrost/kernel/src/core/: chunk.rs
bifrost/kernel/src/generator/: mod.rs  terrain.rs
bifrost/kernel/src/runtime/: streamer.rs
bifrost/lockstep/: Cargo.toml
bifrost/lockstep/src/: barrier.rs  budget.rs  input.rs  lib.rs  scheduler.rs  tick.rs
bifrost/nova-anim/: Cargo.toml
bifrost/nova-anim/src/: clip.rs
bifrost/nova-core/src/: transform.rs
bifrost/nova-input/src/: lib.rs
bifrost/nova-render/: Cargo.toml
bifrost/nova-render/src/: pipeline.rs  shaders.rs
bifrost/physics/: Cargo.toml
bifrost/physics/src/: executor.rs  lib.rs  material.rs  vec3.rs  voxel.rs  world.rs
bifrost/rps/: README.md
bifrost/run/: Cargo.toml
bifrost/run/src/: director.rs  end_condition.rs  lib.rs  meta.rs  run.rs
bifrost/safe-city/: Cargo.toml
bifrost/safe-city/src/: auction.rs  base.rs  city.rs  director.rs  lib.rs  zone.rs
bifrost/server/: Cargo.toml
bifrost/server/src/: admin.rs  api.rs  main.rs  models.rs  state.rs
bifrost/synthesis/: Cargo.toml
bifrost/synthesis/src/: agent.rs  faction.rs  intent.rs  lib.rs  memory.rs  strategy.rs  tick.rs
bifrost/vis/: Cargo.toml
bifrost/vis/src/: coord.rs  instruction.rs  lib.rs  opcode.rs  payload.rs  program.rs
bifrost/voxel-kernel/src/: lib.rs
bifrost/voxel-kernel/src/bridge/: wac_adapter.rs
bifrost/voxel-kernel/src/core/: navmesh.rs
bifrost/voxel-kernel/src/generator/: biome.rs  noise.rs
bifrost/wac/: Cargo.toml
bifrost/wac/src/: azure.rs  biomes.rs  cache.rs  lib.rs  nvidia.rs  pressure.rs  types.rs  validate.rs
bifrost/wac/src/compile/: anim_bridge.rs  animation.rs  biome.rs  entity.rs  loot.rs  mod.rs  tilemap.rs
bifrost/wac/src/director/: mod.rs
bifrost/wasm/: Cargo.toml
bifrost/wasm/src/: lib.rs
bifrost/witness/: Cargo.toml
bifrost/witness/src/: executor.rs  lib.rs  quorum.rs  role.rs  tick_hash.rs  vote.rs
docs/: AI-INTEGRATION-MASTER-PLAN.md  ARCHITECTURE.md  BIFROST-SPEC.md  CORE.md  FACTION.md  FIX.md  LORE.md  NOVA.md  PLAN.md  STORY.md  USAGE.md  WAC.md  WORLD.md
docs/api/: usage.md
docs/engine/: architecture.md  bifrost-protocol.md  client-runtime.md  wac.md
docs/game/: factions.md  monsters.md  npcs.md  players.md  quests.md  skills.md  world.md
docs/ops/: docker.md
docs/planning/: roadmap.md
nexus/voxel-kernel/: Cargo.toml
nexus/voxel-kernel/src/bridge/: mod.rs  wac_adapter.rs
nexus/voxel-kernel/src/core/: materials.rs  mesh.rs  mod.rs  palette.rs  voxel.rs
nexus/voxel-kernel/src/runtime/: mod.rs  world.rs
nova/anim/src/: lib.rs  skeleton.rs
nova/core/: Cargo.toml
nova/core/src/: ecs.rs  time.rs
nova/input/: Cargo.toml
nova/render/: Cargo.toml
nova/render/src/: lib.rs
