[workspace]
resolver = "2"
members = [
    "bifrost/kernel",
    "bifrost/vis",
    "bifrost/chunk",
    "bifrost/lockstep",
    "bifrost/witness",
    "bifrost/physics",
    "bifrost/server",
    "bifrost/aigm",
    "bifrost/wasm",
    "bifrost/wac",
    "bifrost/run",
    "bifrost/synthesis",
    "bifrost/safe-city",
    "nexus/voxel-kernel",
    # ── NOVA Engine ────────────────────────────────────────────────────────────
    "nova/core",      # ECS · Transform3D · SceneGraph · Time
    "nova/render",    # WebGPU voxel pipeline · Camera3D · WGSL shaders
    "nova/anim",      # VoxelSkeleton · AnimClip · AnimFSM
    "nova/input",     # KeyCode/Mouse → ActionId abstraction
]

[workspace.package]
version  = "0.1.0"
edition  = "2021"
license  = "MIT"
authors  = ["bKG Contributors"]
repository = "https://github.com/soniaschuh88-ship-it/mmo"

[workspace.dependencies]
# Serialization
serde       = { version = "1",   features = ["derive"] }
serde_json  = "1"

# Cryptography
blake3      = "1"
ed25519-dalek = { version = "2", features = ["serde"] }
rand        = "0.8"

# Utils
thiserror   = "1"
bytemuck    = { version = "1", features = ["derive"] }
uuid        = { version = "1", features = ["v4", "serde"] }
hex         = "0.4"
tokio       = { version = "1", features = ["full"] }

# HTTP server
axum        = { version = "0.7", features = ["ws"] }
tower       = "0.4"
tower-http  = { version = "0.5", features = ["cors", "trace"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WASM compatibility
getrandom     = { version = "0.2", features = ["js"] }
wasm-bindgen  = "0.2"

# Internal crates
bifrost-vis      = { path = "bifrost/vis" }
bifrost-kernel   = { path = "bifrost/kernel" }
bifrost-chunk    = { path = "bifrost/chunk" }
bifrost-lockstep = { path = "bifrost/lockstep" }
bifrost-witness  = { path = "bifrost/witness" }
bifrost-physics  = { path = "bifrost/physics" }
bifrost-server   = { path = "bifrost/server" }
bifrost-wac      = { path = "bifrost/wac" }
bifrost-aigm     = { path = "bifrost/aigm" }
bifrost-wasm     = { path = "bifrost/wasm" }
bifrost-run       = { path = "bifrost/run" }
bifrost-synthesis  = { path = "bifrost/synthesis" }
bifrost-safe-city  = { path = "bifrost/safe-city" }
nexus-voxel-kernel = { path = "nexus/voxel-kernel" }
# NOVA Engine
nova-core   = { path = "nova/core" }
nova-render = { path = "nova/render" }
nova-anim   = { path = "nova/anim" }
nova-input  = { path = "nova/input" }
