[workspace]
resolver = "2"
members = [
    "bifrost/kernel",
    "bifrost/vis",
    "bifrost/chunk",
    "bifrost/lockstep",
    "bifrost/witness",
    "bifrost/physics",
    "bifrost/server",
    "bifrost/aigm",
    "bifrost/wasm",
    "bifrost/wac",
    "bifrost/run",
    "bifrost/synthesis",
    "bifrost/safe-city",
    # ── NOVA Engine + Voxel Kernel (unified under bifrost/) ───────────────────
    "bifrost/voxel-kernel",   # Headless voxel runtime · WAC adapter · chunk gen
    "bifrost/nova-core",      # ECS · Transform3D · SceneGraph · Time
    "bifrost/nova-render",    # WebGPU voxel pipeline · Camera3D · WGSL shaders
    "bifrost/nova-anim",      # VoxelSkeleton · AnimClip · AnimFSM
    "bifrost/nova-input",     # KeyCode/Mouse → ActionId abstraction
]

[workspace.package]
version  = "0.1.0"
edition  = "2021"
license  = "MIT"
authors  = ["bKG Contributors"]
repository = "https://github.com/soniaschuh88-ship-it/mmo"

[workspace.dependencies]
# Serialization
serde       = { version = "1",   features = ["derive"] }
serde_json  = "1"

# Cryptography
blake3      = "1"
ed25519-dalek = { version = "2", features = ["serde"] }
rand        = "0.8"

# Utils
thiserror   = "1"
bytemuck    = { version = "1", features = ["derive"] }
uuid        = { version = "1", features = ["v4", "serde"] }
hex         = "0.4"
tokio       = { version = "1", features = ["full"] }

# HTTP server
axum        = { version = "0.7", features = ["ws"] }
tower       = "0.4"
tower-http  = { version = "0.5", features = ["cors", "trace"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WASM compatibility
getrandom     = { version = "0.2", features = ["js"] }
wasm-bindgen  = "0.2"

# Internal crates
bifrost-vis      = { path = "bifrost/vis" }
bifrost-kernel   = { path = "bifrost/kernel" }
bifrost-chunk    = { path = "bifrost/chunk" }
bifrost-lockstep = { path = "bifrost/lockstep" }
bifrost-witness  = { path = "bifrost/witness" }
bifrost-physics  = { path = "bifrost/physics" }
bifrost-server   = { path = "bifrost/server" }
bifrost-wac      = { path = "bifrost/wac" }
bifrost-aigm     = { path = "bifrost/aigm" }
bifrost-wasm     = { path = "bifrost/wasm" }
bifrost-run       = { path = "bifrost/run" }
bifrost-synthesis  = { path = "bifrost/synthesis" }
bifrost-safe-city  = { path = "bifrost/safe-city" }
# NOVA Engine + Voxel Kernel (unified under bifrost/ — single source of truth)
nexus-voxel-kernel = { path = "bifrost/voxel-kernel" }
nova-core          = { path = "bifrost/nova-core" }
nova-render        = { path = "bifrost/nova-render" }
nova-anim          = { path = "bifrost/nova-anim" }
nova-input         = { path = "bifrost/nova-input" }
