[package]
name        = "bifrost-aigm"
description = "AI Game Master — event-driven story, quests, and NPC layer for the NOVA voxel engine"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
blake3      = { workspace = true }
thiserror   = { workspace = true }
uuid        = { workspace = true }

[features]
# Expose test helpers (e.g. event builders, mock registries)
test-helpers = []
