[package]
name        = "bifrost-chunk"
description = "Chunk Authority Epochs — spatial peer authority rotation for the Bifrost Layer"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
serde       = { workspace = true }
blake3      = { workspace = true }
thiserror   = { workspace = true }
hex         = { workspace = true }
uuid        = { workspace = true }
ed25519-dalek = { workspace = true }
bifrost-vis = { workspace = true }

[features]
test-helpers = []
