[package]
name        = "bifrost-items"
description = "NOVA Item System — ItemDef, ItemRegistry, Inventory, effects"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
