[package]
name        = "bifrost-kernel"
description = "Foundational primitives that enforce the BIFROST architecture rules"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
blake3     = "1"
