[package]
name        = "bifrost-lockstep"
description = "Lockstep Tick Scheduler — all peers advance in synchrony"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
serde        = { workspace = true }
thiserror    = { workspace = true }
bifrost-vis  = { workspace = true }
bifrost-chunk = { workspace = true }
