[package]
name        = "bifrost-safe-city"
description = "Safe City + Economy — anti-chaos anchor, auction house, zone warfare, and world director"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
uuid       = { workspace = true }
