[package]
name        = "bifrost-server"
description = "HTTP server binary exposing the Bifrost Layer REST API"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[[bin]]
name = "bifrost-server"
path = "src/main.rs"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
hex         = { workspace = true }
tokio       = { workspace = true }
axum        = { workspace = true }
tower-http  = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }

bifrost-vis      = { workspace = true }
bifrost-chunk    = { workspace = true }
bifrost-lockstep = { workspace = true }
bifrost-witness  = { workspace = true }
bifrost-physics  = { workspace = true }
bifrost-kernel    = { workspace = true }
bifrost-wac       = { workspace = true }
bifrost-run       = { workspace = true }
bifrost-synthesis = { workspace = true }
bifrost-safe-city = { workspace = true }
bifrost-aigm      = { workspace = true }
# nexus-voxel-kernel is now part of bifrost-kernel (merged)
uuid = { workspace = true }
