[package]
name        = "bifrost-vis"
description = "Voxel Instruction Set — deterministic opcode system for the Bifrost Layer"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
serde     = { workspace = true }
blake3    = { workspace = true }
thiserror = { workspace = true }
hex       = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
