[package]
name        = "bifrost-wac"
description = "World Asset Compiler — text → validated, deterministic asset IR"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
blake3     = { workspace = true }
thiserror  = { workspace = true }
uuid       = { workspace = true }
rand       = { workspace = true }

[dev-dependencies]
# nothing extra needed for unit tests
