[package]
name        = "bifrost-wac"
description = "World Asset Compiler — text → validated, deterministic 2-D asset IR"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
blake3     = { workspace = true }
thiserror  = { workspace = true }
uuid       = { workspace = true }
rand       = { workspace = true }
hex        = { workspace = true }
# AnimIR → nova-anim FSM bridge lives in nova-anim (feature "wac"), not here.
# R1: bifrost-wac has no nova dependency.

# NVIDIA NIM — optional; enabled by the `nvidia-nim` feature.
# Uses blocking reqwest so WAC stays synchronous (no async runtime needed).
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "blocking"] }

[features]
# Enable the NVIDIA NIM API client for LLM-backed asset spec generation.
nvidia-nim = ["dep:reqwest"]
# Enable the Azure AI Foundry client (bkg-resource, germanywestcentral).
# Takes priority over nvidia-nim when AZURE_AI_KEY env var is set.
azure-ai   = ["dep:reqwest"]

[dev-dependencies]
# nothing extra needed for unit tests
