[package]
name        = "nova-core"
description = "NOVA Engine — ECS World, Transform3D, SceneGraph, Time"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
serde     = { workspace = true }
thiserror = { workspace = true }
