[package]
name        = "nova-input"
description = "NOVA Engine — Keyboard/Mouse/Gamepad → Action abstraction"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
serde     = { workspace = true }
nova-core = { workspace = true }
