[package]
name        = "nova-render"
description = "NOVA Engine — WebGPU voxel pipeline, Camera3D, WGSL shaders"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
serde              = { workspace = true }
thiserror          = { workspace = true }
bytemuck           = { workspace = true }
nova-core          = { workspace = true }
nexus-voxel-kernel = { workspace = true }
